feat: 验证会员密码
